[package]
name = "tor-netdir"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Types to represent and use a Tor network directory"
keywords = [ "tor", "arti" ]
categories = [ "network-programming" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
experimental-api = []

[dependencies]
caret = { path = "../caret", version= "*" }
tor-checkable = { path="../tor-checkable", version= "*" }
tor-netdoc = { path="../tor-netdoc", version= "*" }
tor-linkspec = { path="../tor-linkspec", version= "*" }
tor-llcrypto = { path="../tor-llcrypto", version= "*" }
tor-protover = { path="../tor-protover", version= "*" }
tor-units = { path="../tor-units", version= "*" }

base64 = "0.13.0"
digest = "0.9.0"
hex = "0.4.3"
log = "0.4.14"
once_cell = "1.7.2"
rand = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
signature = "1.3.0"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"
simple-logging = "2.0.2"
tor-netdoc = { path="../tor-netdoc", version= "*", features=["build_docs"] }
