[package]
name = "tor-netdoc"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version="*" }
tor-bytes = { path="../tor-bytes", version="*" }
tor-cert = { path="../tor-cert", version="*" }
tor-protover = { path="../tor-protover", version= "*" }
tor-checkable = { path="../tor-checkable", version= "*" }

base64 = "0.13.0"
chrono = "0.4.19"
digest = "0.9.0"
hex = "0.4.2"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
signature = "1.2.2"
thiserror = "1.0.22"

[dev-dependencies]
hex-literal = "0.3.1"
