[package]
name = "tor-netdoc"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Network document formats used with the Tor protocols."
keywords = [ "tor", "arti" ]
categories = [ "parser-implementations" ]

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version="*" }
tor-bytes = { path="../tor-bytes", version="*" }
tor-cert = { path="../tor-cert", version="*" }
tor-protover = { path="../tor-protover", version= "*" }
tor-checkable = { path="../tor-checkable", version= "*" }

base64 = "0.13.0"
bitflags = "1.2.1"
chrono = "0.4.19"
digest = "0.9.0"
hex = "0.4.3"
once_cell = "1.7.2"
phf = { version = "0.8.0", features = ["macros"] }
serde = "1.0.124"
signature = "1.3.0"
thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"
