[package]
name = "tor-netdoc"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Network document formats used with the Tor protocols."
keywords = [ "tor", "arti" ]
categories = [ "parser-implementations" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
build_docs = [ "rand" ]

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version="0.0.0" }
tor-bytes = { path="../tor-bytes", version="0.0.0" }
tor-cert = { path="../tor-cert", version="0.0.0" }
tor-protover = { path="../tor-protover", version="0.0.0" }
tor-checkable = { path="../tor-checkable", version="0.0.0" }

base64 = "0.13.0"
bitflags = "1.2.1"
chrono = "0.4.19"
digest = "0.9.0"
hex = "0.4.3"
once_cell = "1.7.2"
phf = { version = "0.9.0", features = ["macros"] }
serde = "1.0.124"
signature = "1.3.0"
thiserror = "1.0.24"
weak-table = "0.3.0"

rand = { version = "0.8.3", optional=true }

[dev-dependencies]
hex-literal = "0.3.1"
