[package]
name = "tor-proto"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tor-llcrypto = { path="../tor-llcrypto" }
tor-bytes = { path="../tor-bytes" }
tor-cert = { path="../tor-cert" }
tor-linkspec = { path="../tor-linkspec" }
tor-checkable = { path="../tor-checkable" }
tor-protover = { path="../tor-protover" }
tor-cell = { path="../tor-cell" }

arrayref = "0.3.6"
bytes = "0.5.6"
crypto-mac = "0.9.1"
digest = "0.9.0"
futures = "0.3.6"
futures_codec = "0.4.1"
generic-array = "0.14.4"
hkdf = "0.9.0"
hmac = "0.9.0"
log = "0.4.11"
rand = "0.7.3"
rand_core = "0.5.1"
stream-cipher = "0.7.1"
subtle = "2.3.0"
thiserror = "1.0.21"
typenum = "1.12.0"
zeroize = "1.1.1"

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.2"
