[package]
name = "tor-proto"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tor-rtcompat = { path="../tor-rtcompat", default-features=false }
tor-llcrypto = { path="../tor-llcrypto" }
tor-bytes = { path="../tor-bytes" }
tor-cert = { path="../tor-cert" }
tor-linkspec = { path="../tor-linkspec" }
tor-checkable = { path="../tor-checkable" }
tor-protover = { path="../tor-protover" }
tor-cell = { path="../tor-cell" }

arrayref = "0.3.6"
bytes = "1.0.1"
cipher = "0.2.5"
crypto-mac = "0.10.0"
digest = "0.9.0"
event-listener = "2.5.1"
futures = "0.3.13"
asynchronous-codec = "0.6.0"
generic-array = "0.14.4"
hkdf = "0.10.0"
hmac = "0.10.1"
log = "0.4.14"
rand = "0.7.3"
rand_core = "0.5.1"
subtle = "2.4.0"
thiserror = "1.0.24"
typenum = "1.12.0"
zeroize = "1.2.0"

[dev-dependencies]
futures-await-test = "0.3.0"
hex-literal = "0.3.1"
hex = "0.4.2"
pin-project= "1.0.5"
