[package]
name = "tor-proto"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Asynchronous client-side implementation of the central Tor network protocols"
keywords = [ "tor", "arti", "networking", "anonymity" ]
categories = [ "network-programming", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
hs = []

[dependencies]
tor-llcrypto = { path="../tor-llcrypto", version="0.0.0" }
tor-bytes = { path="../tor-bytes", version="0.0.0" }
tor-cert = { path="../tor-cert", version="0.0.0" }
tor-linkspec = { path="../tor-linkspec", version="0.0.0" }
tor-checkable = { path="../tor-checkable", version="0.0.0" }
tor-protover = { path="../tor-protover", version="0.0.0" }
tor-cell = { path="../tor-cell", version="0.0.0" }

arrayref = "0.3.6"
bytes = "1.0.1"
cipher = "0.3.0"
crypto-mac = "0.11.0"
digest = "0.9.0"
event-listener = "2.5.1"
futures = "0.3.13"
asynchronous-codec = "0.6.0"
generic-array = "0.14.4"
hkdf = "0.11.0"
hmac = "0.11.0"
tracing = "0.1.26"
rand = "0.8.3"
rand_core = "0.6.2"
subtle = "2.4.0"
thiserror = "1.0.24"
typenum = "1.13.0"
zeroize = "1.3.0"

[dev-dependencies]
futures-await-test = "0.3.0"
hex-literal = "0.3.1"
hex = "0.4.3"
