[package]
name = "tor-protover"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Implementation for Tor's subprotocol versioning"
keywords = [ "tor", "arti" ]

[dependencies]
caret = { path="../caret", version="*" }

thiserror = "1.0.24"
