[package]
name = "tor-retry"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Helpers to retry fallable operations, used by Tor"
keywords = [ "tor", "arti", "async", "retry" ]
categories = [ "algorithms" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]

anyhow = "1.0.38"
