[package]
name = "tor-rtcompat"
version = "0.0.0"
authors = ["Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]

default = [ "tokio" ]
async-std = [ "async-std-crate", "async-io" ]
tokio = [ "tokio-crate", "tokio-stream" ]

[dependencies]

futures = "0.3.13"

async-std-crate = { package = "async-std", version = "1.7.0", optional = true }
async-io = { version = "1.3.1", optional = true }

tokio-crate = { package = "tokio", version = "1.2.0", optional = true, features = ["full"] }
tokio-stream = { version = "0.1.3", optional = true, features = ["net"]}