[package]
name = "tor-rtcompat"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Compatibility layer for asynchronous runtimes, used by Tor"
keywords = [ "tor", "arti", "async" ]
categories = [ "asynchronous" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]

default = [ ]
async-std = [ "async-std-crate", "async-io", "async-native-tls" , "async_executors/async_std" ]
tokio = [ "tokio-crate", "tokio-util", "tokio-native-tls", "async_executors/tokio_tp" ]

[dependencies]

async_executors = { version = "0.4.0", default_features=false }
async-trait = "0.1.48"
futures = "0.3.13"
pin-project = "1.0.5"
native-tls = "0.2.7"

async-std-crate = { package = "async-std", version = "1.7.0", optional = true }
async-io = { version = "1.4.1", optional = true }
async-native-tls = { version = "0.3.3", optional = true }

tokio-crate = { package = "tokio", version = "1.7.0", optional = true, features = ["rt", "rt-multi-thread", "io-util", "net", "time" ] }
tokio-util = { version = "0.6.7", features = ["compat"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }

