[package]
name = "tor-rtmock"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Testing mock support for tor-rtcomapt"
keywords = [ "tor", "arti", "async", "testing" ]
categories = [ "asynchronous", ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
async-trait = "0.1.48"
futures = "0.3.13"
thiserror = "1.0.24"

tor-rtcompat = { version="0.0.0", path = "../tor-rtcompat" }

[dev-dependencies]
futures-await-test = "0.3.0"
rand = "0.8.3"
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0", features=["tokio"] }
