[package]
name = "tor-socksproto"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Encode and decode the SOCKS protocol, as extended in Tor"
keywords = [ "tor", "arti", "socks" ]
categories = [ "network-programming" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
caret = { path="../caret" }
tor-bytes = { path="../tor-bytes" }

thiserror = "1.0.24"

[dev-dependencies]
hex-literal = "0.3.1"

