[package]
name = "arti"
version = "0.0.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A rust implementation of the Tor privacy tools."
keywords = [ "tor", "arti", "privacy", "anonymity" ]
categories = [ "command-line-utilities", "cryptography" ]
repository="https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = [ "tokio" ]
async-std = [ "tor-client/async-std", "tor-rtcompat/async-std", "async-ctrlc", "once_cell" ]
tokio = [ "tokio-crate", "tor-client/tokio", "tor-rtcompat/tokio" ]
static = [ "tor-rtcompat/static", "tor-dirmgr/static" ]

[dependencies]
tor-client = { package="arti-tor-client", path = "../tor-client", version="0.0.0" }
tor-circmgr = { path="../tor-circmgr", version="0.0.0" }
tor-dirmgr = { path="../tor-dirmgr", version="0.0.0" }
tor-rtcompat = { path="../tor-rtcompat", version="0.0.0", default-features=false }
tor-socksproto = { path="../tor-socksproto", version="0.0.0" }
tor-config = { path="../tor-config", version="0.0.0" }

anyhow = "1.0.38"
async-ctrlc = { version = "1.2.0", optional = true }
config = { version = "0.11.0", default-features = false }
futures = "0.3.13"
tracing = "0.1.26"
once_cell = { version = "1.7.2", optional = true }
serde = { version = "1.0.124", features = ["derive"] }
tracing-subscriber = "0.2.19"
tokio-crate = { package="tokio", version = "1.7.0", optional = true, features = ["signal"] }
argh = "0.1.4"
